fixed side scroll issue and covered button

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 body {
   font-family: "Abel", sans-serif !important;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
